/**
 * App icon: "Zen icons created by Freepik - Flaticon"
 * https://www.flaticon.com/free-icons/zen
 */

plugins {
    id 'com.android.application'
}

android {
    namespace 'com.zen.browser'
    compileSdk 34

    defaultConfig {
        applicationId "com.zen.browser"
        minSdk 21
        targetSdk 34
        versionCode 1
        versionName "1.0"
    }

    buildTypes {
        release {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
    implementation 'com.google.zxing:core:3.5.2'
}
